adding Library module; adding cross origin support

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,9 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+API_ACCESS_CONTROL_ALLOW_ORIGIN=
+API_AUTHENTICATION=
+
+TABLE_ROW_COUNT=20
+TABLE_ORDER=ASC
