--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "~6.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "elibyy/tcpdf-laravel": "5.4.*",
         "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
